# ldapcached

./: .gitignore  requirements.txt  setup.cfg
etc/: ldapcached.conf.example
etc/logrotate.d/: ldapcached
etc/systemd/system/: ldapcached.service
ldapcached/: cache.py  cli.py  client.py  daemon.py  proxy.py
