[metadata]
name = ldapcached
summary = LDAP caching daemon
author = Ivan Mironov
author-email = mironov.ivan@gmail.com
home-page = https://github.com/im-0/ldapcached

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    ldapcached

[entry_points]
console_scripts =
    ldapcached = ldapcached.cli:main
